// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Description /> renders correctly 1`] = `
<View
  style={
    {
      "paddingBottom": 10,
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#e5e5e5",
        "borderBottomWidth": 1,
      }
    }
  />
  <View
    style={
      {
        "padding": 20,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#232b2b",
            "fontSize": 20,
            "fontWeight": "bold",
            "marginBottom": 5,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Good for
    </Text>
    <Text
      style={
        [
          {
            "color": "#A6A6A6",
            "fontSize": 16,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Full body
    </Text>
  </View>
  <View
    style={
      {
        "borderBottomColor": "#e5e5e5",
        "borderBottomWidth": 1,
      }
    }
  />
  <View
    style={
      {
        "padding": 20,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#232b2b",
            "fontSize": 20,
            "fontWeight": "bold",
            "marginBottom": 5,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Equipment
    </Text>
    <Text
      style={
        [
          {
            "color": "#A6A6A6",
            "fontSize": 16,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Equipment needs for the drill
    </Text>
  </View>
  <View
    style={
      {
        "borderBottomColor": "#e5e5e5",
        "borderBottomWidth": 1,
      }
    }
  />
  <View
    style={
      {
        "padding": 20,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#232b2b",
            "fontSize": 20,
            "fontWeight": "bold",
            "marginBottom": 5,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Description
    </Text>
    <Text
      style={
        [
          {
            "color": "#A6A6A6",
            "fontSize": 16,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Description of the drill
    </Text>
  </View>
  <View
    style={
      {
        "borderBottomColor": "#e5e5e5",
        "borderBottomWidth": 1,
      }
    }
  />
</View>
`;

exports[`<Description /> renders correctly as minimal 1`] = `
<View
  style={
    {
      "paddingBottom": 10,
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#e5e5e5",
        "borderBottomWidth": 1,
      }
    }
  />
  <View
    style={
      {
        "padding": 10,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#232b2b",
            "fontSize": 20,
            "fontWeight": "bold",
            "marginBottom": 5,
            "textAlign": "center",
          },
          {
            "textAlign": "left",
          },
        ]
      }
    >
      Equipment
    </Text>
    <Text
      style={
        [
          {
            "color": "#A6A6A6",
            "fontSize": 16,
            "textAlign": "center",
          },
          {
            "textAlign": "left",
          },
        ]
      }
    >
      Equipment needs for the drill
    </Text>
  </View>
  <View
    style={
      {
        "borderBottomColor": "#e5e5e5",
        "borderBottomWidth": 1,
      }
    }
  />
  <View
    style={
      {
        "padding": 10,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#232b2b",
            "fontSize": 20,
            "fontWeight": "bold",
            "marginBottom": 5,
            "textAlign": "center",
          },
          {
            "textAlign": "left",
          },
        ]
      }
    >
      Description
    </Text>
    <Text
      style={
        [
          {
            "color": "#A6A6A6",
            "fontSize": 16,
            "textAlign": "center",
          },
          {
            "textAlign": "left",
          },
        ]
      }
    >
      Description of the drill
    </Text>
  </View>
  <View
    style={
      {
        "borderBottomColor": "#e5e5e5",
        "borderBottomWidth": 1,
      }
    }
  />
</View>
`;
